fabric/testdata/out/ing_spp-bulk-updater-default-404-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"spp-bulk-updater","controller-uid":"e586799c-5510-4a61-80cb-bead7c9b588a","deployment-id":"d-bifte6rn17yu4n5xcyopwz7fr","pipeline-id":"l-2pzi5f7y9tucwozo68dap5dcp2"},"name":"spp-bulk-updater-default-404-route","namespace":"default"},"spec":{"rules":[{"host":"spp-bulk-updater.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-bulk-updater","servicePort":"http"},"pathType":"Imple [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-02-18T10:18:31Z"
  generation: 4
  labels:
    application: spp-bulk-updater
    controller-uid: e586799c-5510-4a61-80cb-bead7c9b588a
    deployment-id: d-bifte6rn17yu4n5xcyopwz7fr
    pipeline-id: l-2pzi5f7y9tucwozo68dap5dcp2
  name: spp-bulk-updater-default-404-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-bulk-updater
    uid: e586799c-5510-4a61-80cb-bead7c9b588a
  resourceVersion: "1379110893"
  uid: 11b640fa-c2d4-47de-a58b-d735bd673767
spec:
  rules:
  - host: spp-bulk-updater.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-bulk-updater
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
